<?xml version="1.0"?>
<package>
  <name>user_map</name>
  <version>0.1.0</version>
  <description>

     user_map

  </description>
  <maintainer email="cedric.godin@usherbrooke.ca">Cedric Godin</maintainer>
  <author>Cedric Godin</author>
  <license>BSD</license>
  <!-- <url type="bugtracker">https://github.com/stonier/qt_ros/issues</url> -->
  <!-- <url type="repository">https://github.com/stonier/qt_ros</url> -->

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>libqt5-widgets</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>grid_map_ros</build_depend>
  <build_depend>eigen_conversions</build_depend>
  <build_depend>OpenCV</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>libqt5-widgets</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>grid_map_ros</run_depend>
  <run_depend>eigen_conversions</run_depend>
  <run_depend>OpenCV</run_depend>
  <run_depend>message_runtime</run_depend>
 
</package>
